--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,342 @@
-.App {
-  text-align: center;
+body{
+  font-family: 'Roboto', sans-serif;
+}
+.list-app{
+  margin-left: 8%;
+  margin-right: 8%;
+}
+.Home-header{
+  margin-left: 8%;
+}
+.card {
+    width: 300px;
+    /* background-image: url('./image/back3.jpg'); */
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin: 10px;
+    border-radius: 10px;
+}
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.card-content {
+    padding: 2px 16px;
+}
+.card-content h3{
+    color: rgb(0, 0, 0);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 7%;
+    margin-right: 3%;
+}
+.card-content button{
+    border: none;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    padding: 9px;
+    border-radius: 8px;
+    background-color: white;
+    font-weight: 600;
+    color: #333;
+    cursor: pointer;
+}
+.card-content button:hover{
+    background-color: rgb(56, 106, 255);
+    color: white;
+}
+.card-data{
+    display: flex;
+    justify-content: space-between; /* aligns left and right sections */
+    align-items: center; /* centers the sections vertically */ 
+    margin-bottom: 7px;  
+}
+.card-data p{
+    font-weight: 500;
+    color: rgb(0, 0, 0);
+    font-size: 13px;
+}
+/*navbar style*/
+  
+nav a {
+    color: rgb(65, 65, 65);
+    text-decoration: none;
+    padding: 20px;
+    font-size: 16px;
+    font-style: sans-serif;
+}
+nav a:hover {
+    color: rgb(255, 160, 160);
+    transition: 0.3s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.logo {
+    width: 30px;
+    height: 30px;
+    margin-left: 50px
+}
+
+nav {
+    display: flex;
+    justify-content: space-between; /* aligns left and right sections */
+    align-items: center; /* centers the sections vertically */
+    background-color: rgb(255, 255, 255);
+    height: 50px;
+    box-shadow: 0 8px 16px 0 rgba(171, 171, 171, 0.2);
+}
+  
+.left-item-section {
+    /* styles for the left section */
+    width: 10%;
+    margin-left: 2%;
+    
+}
+.middle-item-section {
+    /* styles for the left section */
+    width: 65%;
+    
+}
+.right-item-section {
+    /* styles for the right section */
+    margin-right: 3%;
+    width: 20%;
+}
+  
+  
+  @media (max-width: 600px) {
+    nav .left-items a {
+      display: none;
+    }
   }
+  
+  /*left and right section*/
+  .container {
+    display: flex;
+    margin-left: 8%;
+    margin-right: 8%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.left-column {
+    width: 25%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    margin-right: 20px;
+    margin-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.right-column {
+    width: 75%;
+    margin-top: 20px;
+}
+.left-column-h3{
+    color: #333;
+    margin-left: 10px;
+}
+@media (max-width: 600px) {
+    .container {
+        flex-direction: column;
+    }
+    .left-column, .right-column {
+        width: 100%;
+    }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/*small side cards*/
+  .small-card {
+    display: flex;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin: 10px 15px 10px 15px;
+    padding: 5px;
+    background-color: white;
+    border-radius: 10px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .first-column, .last-column {
+    width: 15%;
   }
-}
+  .first-column{
+    margin: 5px 10px 0px 10px;
+  }
+  .first-column img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+  .middle-column {
+    width: 70%;
+  }
+  
+  /* table style*/
+  table {
+    width: 100%; /* set the width of the table */
+    border-collapse: collapse; /* remove the space between cells */
+  }
+  table thead tr{
+    border-bottom: 1px solid rgb(226, 226, 226);
+    border-top: 1px solid rgb(225, 225, 225);
+  }
+  table thead tr th, td {
+    border: 1px solid #ccc; /* add a border to the cells */
+    padding: 14px 8px; /* add padding to the cells */
+    text-align: center;
+    border: none;
+    color: black;
+    font-weight: 500;
+  }
+  table thead tr th {
+    color: rgb(61, 61, 61);
+    font-weight: 600;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #f2f2f2; /* add a background color to even rows */
+    text-decoration: none;
+  }
+  
+  tr:nth-child(odd) {
+    background-color: #ffffff; /* add a background color to odd rows */
+    
+  }
+  .th-title:hover{
+    color: rgb(255, 140, 140);
+  }
+  .tr-data th{
+    border: none;
+    color: rgb(0, 0, 0);
+    font-weight: 500;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+  .company-list{
+    display: flex;
+  }
+  .company-list img{
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    border: 2px solid rgb(228, 228, 228);
+    padding: 5px;
+    border-radius: 50%;
+  }
+  
+  /*single problem page style*/
+  .post-container {
+    display: flex;
+  }
+  .section-1 {
+    width: 60%;
+    margin-bottom: 0px;
+  }
+  .section-2 {
+    display: flex;
+    width: 40%;
+  }
+  .section-1 p{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.75rem;
+  }
+  .difficulty{
+    padding: 10px;
+  }
+  .difficulty p{
+    /* background-color: rgb(178, 254, 178); */
+    padding: 6px 14px;
+    border-radius: 12px;
+    font-size: 14px;
+    /* color: rgba(0, 175, 155); */
+    font-weight: 600;
+  }
+  .status{
+    padding: 10px;
+  }
+  .like{
+    padding: 10px;
+  }
+  .dislike{
+    padding: 10px;
+  }
+  .platform{
+    padding-bottom: 15px;
+  }
+  .platform img{
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    border-radius: 50%;
+    margin-left: 10px;
+    margin-top: 5px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1);
+    
+  }
+  .platform img:hover{
+    background-color: rgb(245, 245, 245);
+  }
+  .company{
+    display: flex;
+    border-bottom: 1px solid rgb(220, 220, 220);
+    padding-bottom: 15px;
+  }
+  .company img{
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    border: 2px solid rgb(228, 228, 228);
+    padding: 5px;
+    border-radius: 50%;
+  }
+  
+  .input_output{
+    background-color: rgb(234, 234, 234);
+    padding: 10px 20px;
+    font-size: 17px;
+    line-height: 1.75rem;
+    border-radius: 8px;
+  }
+
+  /*tabs design */
+  .tabs-container{
+    margin-left: 8%;
+    margin-right: 8%;
+  }
+  .tabs {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .tab-nav {
+    flex-basis: 100%;
+    /* margin-left: 20PX; */
+    margin-top: 20px;
+    background-color: rgb(247, 246, 246);
+  }
+  .tab-nav-item {
+    padding: 15px 20px;
+    border:none;
+    cursor: pointer;
+    margin-right: 10px;
+    background-color: rgb(247, 246, 246);
+    color: rgb(36, 36, 36);
+    font-size: 14px;
+    letter-spacing: 0.08rem;
+  }
+  .tab-nav-item.active {
+    background-color: rgb(255, 255, 255);
+    border:none;
+    border-top: 2px solid rgb(237, 237, 237);
+  }
+  .tab-content {
+    flex-basis: 100%;
+    padding: 20px;
+  }
+  .tab-item {
+    display: none;
+  }
+  .tab-item.active {
+    display: block;
+  }
+  
+  
